--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/turingschool-examples/react-starter-kit",
   "devDependencies": {
+    "@buji405/complete-me": "^1.0.2",
     "babel": "^6.5.2",
     "babel-core": "^6.24.1",
     "babel-eslint": "^6.0.4",
